AM-5484 refactor code to keep SonarQube happy